fixing spacing for edit links

--- a/public/styles/muleStyle.css
+++ b/public/styles/muleStyle.css
@@ -466,6 +466,7 @@ body{
 	.editSLA{
 		color: cyan;
 		font-size: 12px;
+		margin-left: 10px;
 	}
 }
 
